tests/reference/asr_preprocess-cpp1-515bcd9.stderr
tests/errors/cpp1.f90:7:13 semantic error: Variable 'z12345678' not declared
print *, x, X123, y
            ^~~~
